manifests/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: ost
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: ost-app
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
  sessionAffinity: None
  selector:
    app: ost
